# Bevy-integration-testing-toolkit

./: .gitignore  Cargo.toml  Makefile.toml  README.md  changelog.md  plan.md
.github/workflows/: cargo-make.yml  commit-validation.yml
bitt/test_scripts/: controller.bitt_script  keyboard.bitt_script  plain_jumps.bitt_script  three-clicks.bitt_script
crates/bitt/: Cargo.toml
crates/bitt/src/: asserts.rs  headless_default_plugins.rs  input_playback.rs  lib.rs  test_wrangler.rs  timeout_asserter_plugin.rs
crates/bitt/src/input_playback/: artefact_paths.rs  frame_metrics.rs  playback.rs  recording.rs
crates/click_demo/: Cargo.toml
crates/click_demo/src/: lib.rs  main.rs
crates/demo_game/: Cargo.toml
crates/demo_game/src/: assets.rs  lib.rs  main.rs  player.rs  star.rs
crates/lib/src/: lib.rs  physics.rs  player.rs  star.rs  world.rs
crates/main/: Cargo.toml
crates/star_demo/: Cargo.toml
crates/star_demo/src/: lib.rs  player.rs  star.rs
crates/test_framework/: Cargo.toml
crates/test_framework/src/: asserts.rs  input_playback.rs  lib.rs
intermediate_assets/: sfx.aup3
test-game/: Cargo.toml
test-game/lib/: Cargo.toml
test-game/lib/src/: lib.rs
test_scripts/: plain_jumps.bitt_script
