[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
bevy = { version = "0.13", features = ["serialize"] }

# Test games
bevy-inspector-egui = "0.23"

# Star tests game
leafwing-input-manager = "0.13"
bevy_rapier2d = { version = "0.25", features = ["simd-stable"] }

# Clicker tests game
clap = { version = "4.5", features = ["derive"] }

# Testing framework
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
