[package]
name = "bitt"
description = "Bevy integration testing toolkit"
repository = "https://github.com/haihala/Bevy-integration-testing-toolkit"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../../README.md"

keywords = ["bevy", "testing"]

[dependencies]
bevy = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
