[package]
name = "demo_game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy-inspector-egui = { workspace = true }
leafwing-input-manager = { workspace = true }
bevy_rapier2d = { workspace = true }

bevy_integration_test_tool = { path = "../test_framework" }

[features]
integration_test = []
